<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/gray"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingLeft="8dp">

    <RelativeLayout
        android:id="@+id/view_note"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/item_selected_background_drawable"
        android:visibility="invisible">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:contentDescription=""
            android:padding="4dp"
            android:src="@drawable/ic_message_black_24dp" />

        <TextView
            style="@style/TextStyleNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/view_note"
            android:textColor="@color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reschedule"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/item_selected_background_drawable"
        android:visibility="invisible">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:contentDescription=""
            android:padding="4dp"
            android:src="@drawable/ic_update_white_24dp" />

        <TextView
            style="@style/TextStyleNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/reschedule_myvisit"
            android:textColor="@color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/edit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/item_selected_background_drawable">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:contentDescription=""
            android:padding="4dp"
            android:src="@drawable/ic_edit_24dp" />

        <TextView
            style="@style/TextStyleNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/edit_myvisit"
            android:textColor="@color/black" />

    </RelativeLayout>


</LinearLayout>