<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="${relativePackage}.${activityClass}" >

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <LinearLayout
        android:id="@+id/locationMarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewMarket"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_my_location" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dealerIcon"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:src="@drawable/marker" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toRightOf="@+id/dealerIcon"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dealerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Selected Location"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/dealerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="Getting location"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/dealerCall"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/marker" />

    </RelativeLayout>
</FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/layoutGuide"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin_drop_guide1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:src="@drawable/marker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin_drop_guide2"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnSetLocation"
            android:layout_below="@+id/layoutGuide"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next_title"/>

    </RelativeLayout>


</RelativeLayout>